--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "v10.19.0",
+    "npm": "6.14.11"
+},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
